# RT-Lab

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  ffmpeg.bat  main.cpp
chrray-lib/: CMakeLists.txt
chrray-lib/include/: bvh_node.h  camera.h  light.h  matrix.h  object.h  renderer.h  scene.h  texture.h  uniform_grid.h  utils.h
chrray-lib/src/: bvh_node.cpp  camera.cpp  light.cpp  matrix.cpp  object.cpp  renderer.cpp  scene.cpp  texture.cpp  uniform_grid.cpp  utils.cpp
